Fixed overflow bug (iphone 4) add z-index (rubriques)

--- a/style.css
+++ b/style.css
@@ -99,10 +99,10 @@ h1 {
   margin: 0 auto;
   justify-content: space-around;
   align-items: center;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .proses, .poesies, .nondit {
-  --ease: cubic-bezier(0.75, 1, 0.50, 1);
+  --ease: cubic-bezier(0.15, 1, 0.50, 1);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -112,6 +112,15 @@ h1 {
   left: 0;
   top: 0;
   transition: left 0.4s var(--ease), top 0.4s var(--ease), opacity 0.3s var(--ease);
+  z-index: 1;
+}
+.proses {
+  z-index: 3;
+}
+.poesies {
+  z-index: 2;
+}
+.nondit {
   z-index: 1;
 }
 nav .rubrique-image {
@@ -146,7 +155,6 @@ aside img {
   top: 0;
   padding: 2px 3.5% 0;
   padding-left: calc(3.5% + 2px);
-  overflow: hidden;
   -moz-user-select: none;
   user-select: none;
   transition: opacity 0.4s, left 0.4s, top 0.4s;
@@ -543,6 +551,7 @@ figure.thumb img {
   }
   .rubriques {
     flex-direction: column;
+    overflow: hidden;
   }
   nav .rubrique-image {
     margin: 0;
@@ -573,6 +582,7 @@ figure.thumb img {
   }
   #box {
     width: 100%;
+    overflow: hidden;
   }
   #inbox {
     transition: bottom 0.4s, right 0s;
